# kafka

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  READ.ME  ReadMe.md  babble.k  bill.k  buttplug.k  buttplug.spec.c  buttplug.text.c  defs.h  dstrans.c  dstrans.cpp  dstrans.h  etc.cpp  flame.k  funwords.cpp  graph.h  init.c  init.cpp  init.h  insult.k  kafgraf.h  lex.yy.cpp  lexical.l  main.c  main.cpp  maketext.c  maketext.cpp  output.c  output.cpp  output.h  parse.y  psubr.c  psubr.cpp  psubr.h  stuff.c  stuff.cpp  stuff.h  (+2 more)
.github/workflows/: cmake.yml
config/: CMakeLists.txt
grammars/: CMakeLists.txt  babble.k  bill.k  buttplug.k  flame.k  insult.k
kafka/: CMakeLists.txt  ast.h  dstrans.cpp  dstrans.h  funwords.cpp  init.h  parse.y  psubr.cpp  psubr.h  stuff.h
packaging/: CMakeLists.txt  LICENSE.rtf  package_description.txt  patch.xml  shortcuts.xml  welcome.txt
runtime/: CMakeLists.txt  etc.cpp  kafgraf.h  maketext.cpp  maketext.h  node_type.h  output.cpp  runtime.cpp  runtime.h
